2007-09-28  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckReadme):
	Corrected version regexp.
	(CygbuildCmdInstallCheckLibFiles): Fix call to cygcheck function.
	(CygbuildReadmeReleaseMatchCheck): Impreoved awk gsub() regexp.

2007-09-20  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/postinstall.sh.tmp (InstallConffiles): Use 'egrep -E'
	and better regexp to ignore also empty lines.

	* bin/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES::
	preremove-manifest-from.lst): Correct #PKGDIR to $PKGDIR.

	* bin/cygbuild.sh: (CygbuildVersionInfo): Rewrote substitution
	commands. Now Debian special *.orig extension is handled correctly.
	(CygbuildCommandMain::repackage-all,repackage-bin): Remove check
	commands.
	(CygbuildRunShell): Removed 'cd'. Run in current directory.
	(CygbuildSetLDPATHpython): More careful LD_LIBRARY_PATH and
	$LD_RUN_PATH treatment.
	(CygbuildCmdInstallCheckDirStructure): Added /etc check
	(CygbuildShellEnvironenment): Define DESTDIR and prefix.
	(CygbuildCmdInstallCheckManualPages): Tighten manual page directory
	check.

2007-09-19  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/install.tar.options.tmp: Mention
	--exclude=cygbuild-no-docdir-install

	* bin/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES::diff.options):
	Clarify paragraphs.
	(HELP::OPTIONAL EXTERNAL FILES::install.tar.options): Document
	--exclude=cygbuild-no-docdir-install

	* etc/template/Makefile.tmp (clean): Added comments next
	to targets.
	(ETCDIR): Remove extra $.

	* bin/cygbuild.sh: (CygbuildFileReadOptionsMaybe):
	Shorten displayed message.
	(CygbuildCmdBuildMain): Shorten displayed message.
	(CygbuildInstallPackageDocs): Support new option
	'cygbuild-no-docdir-install'.
	(CygbuildCmdInstallCheckCygpatchDirectory): Ignore *.orig* files.
	(CygbuildMatchBashPatternList): Moved to primitives.
	(CygbuildIsMakefileCplusplus): Change \t to [[:space:]].
	(CygbuildMakefilePrefixCheck): Change \t to [[:space:]].