@@ -31,24 +31,25 @@ BASH=/bin/bash
 BASHX="/bin/bash -x"
 BZIP=/usr/bin/bzip2
 CAT=/usr/bin/cat
-CP=/bin/cp
+CP=/usr/bin/cp
 DIFF=/usr/bin/diff
 FILE=/usr/bin/file
 FIND=/usr/bin/find
 GPG=/usr/bin/gpg
-GZIP=/bin/gzip
-LN=/bin/ln
-LS=/bin/ls
+GZIP=/usr/bin/gzip
+LN=/usr/bin/ln
+LS=/usr/bin/ls
 MAKE=/usr/bin/make
-MKDIR=/bin/mkdir
-MV=/bin/mv
+MKDIR=/usr/bin/mkdir
+MV=/usr//bin/mv
 PATCH=/usr/bin/patch
 PERL=/usr/bin/perl
 PYTHON=/usr/bin/python
-RM=/bin/rm
-SED=/bin/sed
+RM=/usr/bin/rm
+RMDIR=/usr//bin/rmdir
+SED=/usr/bin/sed
 SORT=/usr/bin/sort
-TAR=/bin/tar
+TAR=/usr/bin/tar
 TR=/usr/bin/tr
 WGET=/usr/bin/wget
 WHICH=/usr/bin/which
@@ -56,7 +57,7 @@ WHICH=/usr/bin/which
 #   In Cygwin egrep(1) is a shell script. Use GNU grep(1) with option -E,
 #   which is faster.
 
-EGREP="/bin/grep --binary-files=without-match --extended-regexp"
-EGREPP="/bin/grep --binary-files=without-match"
+EGREP="/usr/bin/grep --binary-files=without-match --extended-regexp"
+EGREPP="/usr/bin/grep --binary-files=without-match"
 
 # End of file
